frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: taskflow
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:238015274167:certificate/495c3da0-d014-40ce-82f1-d2432dd758a4"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  type: LoadBalancer
